# ide

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  a.out  command.bat  command.sh  element.h  f  h  ide  ide.cpp  ihatencurses.cpp
src/: box.cpp.old  box.h.old  element-ui.h  element.h.old  ide.cpp
